<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:id="@+id/Welcome_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/username_text"
        android:id="@+id/Username_text"
        android:textSize="18sp"
        android:layout_below="@+id/Welcome_text"
        android:layout_toStartOf="@+id/Welcome_text"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password_text"
        android:id="@+id/Password_text"
        android:textSize="18sp"
        android:layout_below="@+id/Username_text"
        android:layout_alignLeft="@+id/Username_text"
        android:layout_alignStart="@+id/Username_text"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/Users_username"
        android:layout_alignTop="@+id/Username_text"
        android:layout_toEndOf="@+id/login_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Users_password"
        android:layout_alignTop="@+id/Password_text"
        android:layout_alignLeft="@+id/Users_username"
        android:layout_alignStart="@+id/Users_username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_below="@+id/Users_password"
        android:layout_alignLeft="@+id/Password_text"
        android:layout_alignStart="@+id/Password_text"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="102dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_button"
        android:layout_alignTop="@+id/login_button"
        android:layout_alignRight="@+id/Users_password"
        android:layout_alignEnd="@+id/Users_password"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fb_login"
        android:id="@+id/fb_login_button"
        android:layout_below="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:layout_marginTop="79dp"
        android:layout_alignEnd="@+id/register_button"
        android:background="#304abc"
        android:textColor="#ffffff" />


</RelativeLayout>


