<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.NewClub"
    tools:showIn="@layout/activity_new_club">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_club_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/new_club_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="20"
            android:hint="@string/new_club_name"
            android:inputType="text"
            android:maxLength="50"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_club_desc_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_club_name_text_input_layout">

        <EditText
            android:id="@+id/new_club_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_club_desc"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:inputType="text"
            android:maxLength="80"
            android:ems="20"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/club_detail"
        android:id="@+id/new_club_detail_label"
        android:layout_below="@id/new_club_desc_text_input_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/new_club_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_club_detail_label"
        android:ems="20"
        android:inputType="textMultiLine" />

</RelativeLayout>
